force-app/main/default/objects/Case_Unit_Attempt__c.object
<CustomObject>
    <description>Junction table of Case and Unit Attempts</description>
    <fields>
        <fullName>Approval_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True when approval email has been sent (deprecated - use Sent_Emails__c)</description>
        <label>Approval Email Sent (deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Attempts_Allowable__c</fullName>
        <description>How many attempts the student is allowed for the assessment. 0 = unlimited</description>
        <inlineHelpText>0 = unlimited</inlineHelpText>
        <label>Assessment Attempts Allowable</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Attempts_Taken__c</fullName>
        <description>How many attempts the student has taken for the assessment</description>
        <label>Assessment Attempts Taken</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Due_Date_CE_Extension__c</fullName>
        <label>Assessment Due Date (CE Extension)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Due_Date_Effective__c</fullName>
        <description>The effective due date from Moodle at time of submission</description>
        <label>Assessment Due Date (Effective)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Due_Date_Extension__c</fullName>
        <description>The extensiondate value from Moodle</description>
        <label>Assessment Due Date (Extension)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Due_Date_New__c</fullName>
        <description>Assessment Due Date (New)</description>
        <label>Assessment Due Date (New)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Due_Date_Original__c</fullName>
        <description>Original Assessment Due Date</description>
        <label>Assessment Due Date (Original)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Due_Date_Override__c</fullName>
        <description>The duedateoverrides value from Moodle</description>
        <label>Assessment Due Date (Override)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Due_Date_Requested__c</fullName>
        <description>Special Consideration - Assessment Due Date (Requested)</description>
        <label>Assessment Due Date (Requested)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Due_Time_Original__c</fullName>
        <description>Origina Assessment Due Time</description>
        <label>Assessment Due Time (Original)</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Assessment_Name__c</fullName>
        <description>Name of the Assessment</description>
        <label>Assessment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Type__c</fullName>
        <description>Assessment Type</description>
        <label>Assessment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Weight__c</fullName>
        <description>Assessment Weight (%)</description>
        <label>Assessment Weight</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Attendance_Mode__c</fullName>
        <description>Attendance Mode</description>
        <label>Attendance Mode</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Sequence_Number__c</fullName>
        <description>Callista ID</description>
        <label>CI Sequence Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Assessment_ID__c</fullName>
        <description>Id of the Assessment in Callista</description>
        <label>Callista Assessment ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Created_Date__c</fullName>
        <description>Datetime created in Callista</description>
        <label>Callista Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Callista_Integration_Status__c</fullName>
        <description>The result of the most recent integration attempt</description>
        <label>Callista Integration Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Received_Date__c</fullName>
        <description>Date of submission in Callista</description>
        <label>Callista Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>Campus</description>
        <label>Campus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Staff Comment</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complex_Assignment_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Complex Assessment (Previously Complex Assignment Indicator)</description>
        <label>Complex Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>Enquiry__r.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Links to the contact from Enquiry</description>
        <formula>HYPERLINK(&apos;/&apos;+ Enquiry__r.ContactId, Enquiry__r.Contact.Full_Name__c ,&apos;_self&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emails_Sent__c</fullName>
        <label>Emails Sent</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>approved</fullName>
                </value>
                <value>
                    <fullName>eligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enquiry_Number__c</fullName>
        <description>Reflects CaseNumber for use in email templates</description>
        <formula>Enquiry__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enquiry Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Status__c</fullName>
        <description>Status of the Case</description>
        <formula>Text(Enquiry__r.Status)</formula>
        <label>Enquiry Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry__c</fullName>
        <description>Links to the Case</description>
        <label>Enquiry</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Unit Attempt</relationshipLabel>
        <relationshipName>Case_Unit_Attempt</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Enrolled_Credit_Points_Limit__c</fullName>
        <label>Enrolled Credit Points Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exempt_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exempt Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Work_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Group Work Indicator</description>
        <label>Group Work Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handbook__c</fullName>
        <formula>IF(NOT(ISBLANK(Unit_Attempt__r.Unit_Code__c)), HYPERLINK($Label.Handbook_URL + Unit_Attempt__r.Unit_Code__c, &apos;View Handbook&apos;, &apos;_blank&apos;), 
IF(NOT(ISBLANK(Unit_Offering__r.Unit_Code__c)), HYPERLINK($Label.Handbook_URL + Unit_Offering__r.Unit_Code__c, &apos;View Handbook&apos;, &apos;_blank&apos;), 
HYPERLINK($Label.Handbook_URL + Unit_Code__c, &apos;View Handbook&apos;, &apos;_blank&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Handbook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Closed_On_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be marked as true if the record is created with an approved status. This is used to report how many records were auto-approved.</description>
        <label>Is Closed On Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moodle_Assessment_ID__c</fullName>
        <description>&apos;Moodle Assessment ID&apos; will now capture the Assignment ID of the specific assessment task we will attempt to update from a students live Moodle activities.</description>
        <label>Moodle Assessment ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Moodle_Integration_Status__c</fullName>
        <description>&apos;Moodle Integration Status&apos; will convey a message to confirm whether the integration update attempt to update Moodle was successful or unsuccessful.</description>
        <label>Moodle Integration Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>This field is used to capture whether this record was filled in from Moodle or user-provided.
- If the data was received from and filled in from Moodle - it will be &quot;Moodle eLMS&quot;.
- If the data was received from and filled in by the student - it will be &quot;User Input&quot;.</description>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Callista</fullName>
                </value>
                <value>
                    <fullName>Moodle eLMS</fullName>
                </value>
                <value>
                    <fullName>User Input</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outbound_Comments__c</fullName>
        <label>Outbound Comments</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <formula>Enquiry__r.Contact.Person_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Language Unit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overload Request</fullName>
                </value>
                <value>
                    <fullName>Special Permission (Prerequisite Waiver)</fullName>
                </value>
                <value>
                    <fullName>System Issue</fullName>
                    <label>System issue</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_overload__c</fullName>
        <description>Reason for overload</description>
        <label>Reason for overload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type_Developer_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alleged fraudulent evidence</fullName>
                </value>
                <value>
                    <fullName>Assessment already submitted/completed</fullName>
                </value>
                <value>
                    <fullName>Avoidable or preventable IT issue</fullName>
                </value>
                <value>
                    <fullName>Insufficient supporting evidence</fullName>
                </value>
                <value>
                    <fullName>Late application</fullName>
                </value>
                <value>
                    <fullName>Loss of access due to unpaid fees</fullName>
                </value>
                <value>
                    <fullName>Managing study or workload</fullName>
                </value>
                <value>
                    <fullName>Medical certificate not meeting requirements</fullName>
                </value>
                <value>
                    <fullName>Misread dates</fullName>
                </value>
                <value>
                    <fullName>Multiple extensions without adequate supporting evidence</fullName>
                </value>
                <value>
                    <fullName>No exceptional circumstance beyond control</fullName>
                </value>
                <value>
                    <fullName>No extreme circumstances beyond control</fullName>
                </value>
                <value>
                    <fullName>No supporting evidence</fullName>
                </value>
                <value>
                    <fullName>Out of scope of Special Consideration</fullName>
                </value>
                <value>
                    <fullName>Voluntary commitments</fullName>
                </value>
                <value>
                    <fullName>Supplementary exam</fullName>
                </value>
                <value>
                    <fullName>Unable to complete RDA within the maximum time limit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Outcome__c</fullName>
        <label>Requested Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>An alternative and equivalent form of assessment</fullName>
                </value>
                <value>
                    <fullName>Assignment Extension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoD_Status__c</fullName>
        <description>Remission of Debt Status</description>
        <label>Remission of Debt Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved Extension</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Eligible &amp; Exhausted Attempts</fullName>
                </value>
                <value>
                    <fullName>Approved Alternative Assessment</fullName>
                </value>
                <value>
                    <fullName>Approved Exemption</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Comments__c</fullName>
        <description>Student Comments</description>
        <label>Student Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supplied_Supervisors_Email__c</fullName>
        <description>Semicolon separated list of supervisor emails</description>
        <label>Supplied Supervisors Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaching_Period__c</fullName>
        <description>Teaching Period</description>
        <label>Teaching Period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaching_Responsibility__c</fullName>
        <formula>IF (NOT(ISBLANK( Unit_Attempt__c ))
            , Unit_Attempt__r.Teaching_Responsibility__r.Name
            , IF( NOT(ISBLANK( Unit_Offering__c ))
            , Unit_Offering__r.Teaching_Responsibility__r.Name,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teaching Responsibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Validation_Rule__c</fullName>
        <description>- Set this field in a before context flow to run validation rules via flows.</description>
        <label>Trigger Validation Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Add Unit</fullName>
                </value>
                <value>
                    <fullName>Limit on enrolled credit points</fullName>
                </value>
                <value>
                    <fullName>Must be enrolled in specific unit(s)</fullName>
                </value>
                <value>
                    <fullName>Must enrol and pass specific unit(s)</fullName>
                </value>
                <value>
                    <fullName>Must pass a specific number of credit points</fullName>
                </value>
                <value>
                    <fullName>Must pass specific unit(s)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Other Conditions and Notes</fullName>
                </value>
                <value>
                    <fullName>Remove Unit</fullName>
                </value>
                <value>
                    <fullName>Unit type restriction</fullName>
                    <isActive>false</isActive>
                    <label>Unit type restriction</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>External Unique Key</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_Attempt_Status__c</fullName>
        <description>Unit Attempt Status</description>
        <formula>Text(Unit_Attempt__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Attempt Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Attempt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the Unit Attempt</description>
        <label>Unit Attempt</label>
        <referenceTo>Unit_Attempt__c</referenceTo>
        <relationshipLabel>Case Unit Attempt</relationshipLabel>
        <relationshipName>Case_Unit_Attempt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Code_Formula__c</fullName>
        <description>Reflects Unit Code from Unit Attempt otherwise Unit Offering</description>
        <formula>IF(!ISBLANK(Unit_Attempt__c),
            Unit_Attempt__r.Unit_Code__c,
            IF(!ISBLANK(Unit_Offering__c),
            Unit_Offering__r.Unit_Code__c,
            &apos;&apos;
            )
            )</formula>
        <label>Unit Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Code__c</fullName>
        <description>Unit Code</description>
        <label>Unit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Managing_Faculty__c</fullName>
        <description>Displays the Unit Managing Faculty from Unit Attempt</description>
        <formula>IF (NOT(ISBLANK( Unit_Attempt__c ))
            , Unit_Attempt__r.Managing_Faculty__r.Name
            , IF( NOT(ISBLANK( Unit_Offering__c ))
            , Unit_Offering__r.Managing_Faculty__r.Name,&quot;&quot;))</formula>
        <label>Unit Managing Faculty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Offering</label>
        <referenceTo>Unit_Offering__c</referenceTo>
        <relationshipLabel>Case Unit Attempt</relationshipLabel>
        <relationshipName>Case_Unit_Attempt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_Title__c</fullName>
        <description>Reflects either Unit Attempt Title or Unit Offering Title (needed for email merge field)</description>
        <formula>IF(!ISBLANK(Unit_Attempt__c),
    Unit_Attempt__r.Title__c,
    IF(!ISBLANK(Unit_Offering__c),
        Unit_Offering__r.Title__c,
        &apos;&apos;
    )
)</formula>
        <label>Unit Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <description>Displays the Title of the unit</description>
        <formula>IF( NOT(ISBLANK( Unit_Attempt__c )) 
            , HYPERLINK(&apos;/&apos;+Id,Unit_Attempt__r.Unit_Code__c + &apos; - &apos; + Unit_Attempt__r.Title__c,&apos;_self&apos; )
            , IF( NOT(ISBLANK( Unit_Offering__c )) 
            , HYPERLINK(&apos;/&apos;+Id,Unit_Offering__r.Unit_Code__c + &apos; - &apos; + Unit_Offering__r.Title__c,&apos;_self&apos; )
            , HYPERLINK(&apos;/&apos;+Id,Unit_Code__c,&apos;_self&apos; )))</formula>
        <label>Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WI_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is WI eligible</description>
        <label>Withdrawn Incomplete Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WI_Reason__c</fullName>
        <description>Reason for WI</description>
        <label>Withdrawn Incomplete Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WI_Status__c</fullName>
        <description>Withdrawn Incomplete Status</description>
        <label>Withdrawn Incomplete Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Unit Attempt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Enquiry__c</columns>
        <columns>Enquiry_Status__c</columns>
        <columns>Unit__c</columns>
        <columns>Unit_Managing_Faculty__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>WI_Status__c</columns>
        <columns>RoD_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CUA_Academic_Integrity</fullName>
        <columns>Enquiry__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Enquiry_Status__c</columns>
        <columns>Unit__c</columns>
        <columns>Unit_Managing_Faculty__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>Person_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Unit_Attempt__c.Academic_Integrity</value>
        </filters>
        <label>CUA - Academic Integrity</label>
    </listViews>
    <listViews>
        <fullName>CUA_Special_Consideration_Approved1</fullName>
        <columns>Enquiry__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Enquiry_Status__c</columns>
        <columns>Unit__c</columns>
        <columns>Unit_Managing_Faculty__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>Person_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Unit_Attempt__c.Special_Consideration</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved,Approved Alternative Assessment,Approved Extension,Approved Exemption,Declined,Withdrawn</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/22/2024 12:00 AM</value>
        </filters>
        <filters>
            <field>Enquiry_Status__c</field>
            <operation>notEqual</operation>
            <value>Solved</value>
        </filters>
        <label>CUA - Special Consideration Approved</label>
        <sharedTo>
            <group>SEBS_Special_Circumstances</group>
            <group>SEBS_Special_Consideration</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CUA_Special_Consideration_Eligible1</fullName>
        <columns>Enquiry__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Enquiry_Status__c</columns>
        <columns>Unit__c</columns>
        <columns>Unit_Managing_Faculty__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>Person_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Unit_Attempt__c.Special_Consideration</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Eligible</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/22/2024 12:00 AM</value>
        </filters>
        <label>CUA - Special Consideration Eligible</label>
        <sharedTo>
            <group>SEBS_Special_Circumstances</group>
            <group>SEBS_Special_Consideration</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CUA_no_outcome</fullName>
        <columns>Enquiry__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Enquiry_Status__c</columns>
        <columns>Unit__c</columns>
        <columns>Unit_Managing_Faculty__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Unit_Attempt__c.Special_Consideration</value>
        </filters>
        <filters>
            <field>Enquiry_Status__c</field>
            <operation>equals</operation>
            <value>Solved</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
        </filters>
        <label>CUA no outcome</label>
        <sharedTo>
            <group>SEBS_Special_Consideration</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Copy_of_CUA</fullName>
        <columns>Enquiry__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Enquiry_Status__c</columns>
        <columns>Unit__c</columns>
        <columns>Unit_Managing_Faculty__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>Person_ID__c</columns>
        <columns>Assessment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Unit_Attempt__c.Special_Consideration</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/22/2024 12:00 AM</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>lessThan</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
        </filters>
        <label>CUA- Special Consideration - In progress</label>
        <sharedTo>
            <group>SEBS_Special_Circumstances</group>
            <group>SEBS_Special_Consideration</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deferred_assessment_apps_Open</fullName>
        <columns>NAME</columns>
        <columns>Assessment_Due_Date_Original__c</columns>
        <columns>Origin__c</columns>
        <columns>Unit_Code_Formula__c</columns>
        <columns>Person_ID__c</columns>
        <columns>Enquiry_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Handbook__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Unit_Attempt__c.Special_Consideration_Exams</value>
        </filters>
        <filters>
            <field>Enquiry_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Deferred assessment apps - Open</label>
        <sharedTo>
            <group>SEBS_Special_Consideration</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_CUAs_spec_circ</fullName>
        <columns>NAME</columns>
        <columns>Enquiry__c</columns>
        <columns>Enquiry_Status__c</columns>
        <columns>Unit__c</columns>
        <columns>Unit_Managing_Faculty__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>WI_Status__c</columns>
        <columns>RoD_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Unit_Attempt__c.Special_Circumstance</value>
        </filters>
        <filters>
            <field>WI_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Declined,Withdrawn</value>
        </filters>
        <filters>
            <field>Enquiry_Status__c</field>
            <operation>equals</operation>
            <value>Solved,Closed</value>
        </filters>
        <filters>
            <field>RoD_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Declined,Withdrawn</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>12/13/2021 11:18 PM</value>
        </filters>
        <label>Spec Circ - Open CUA, closed enquiry</label>
        <sharedTo>
            <group>SEBS_Special_Circumstances</group>
            <group>SEBS_Special_Consideration</group>
        </sharedTo>
    </listViews>
</CustomObject>